# mmut-rdf-model

./: CHANGELOG.md  README.md  create_mmut_ontology.py  pyproject.toml
.github/workflows/: release.yml
py_mmut_rdf/: mmut-shapes.ttl
tests/: test_mmut.py
tests/fixtures/: workflow-loop.ttl  workflow-valid.ttl
