[tool.poetry]
name = "py_mmut_rdf"
version = "0.0.0"
description = "Python library providing RDF ontology definitions for SysML."
authors = ["Dirk Friedenberger <projekte@frittenburger.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dfriedenberger/mmut-rdf-model"

[tool.poetry.dependencies]
python = "^3.9"
rdflib = ">=6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pyshacl = ">=0.26"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning[plugin]>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
